[package]
name = "yew-app"
version = "0.1.0"
authors = ["Joseph Cho <jscho13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
anyhow = "1"
serde = "1"
serde_derive = "1"
wasm-logger = "0.2.0"
log = "0.4.11"
